endpoint de media que saca todas las fotos, videos y audios de todas las fuentes
