# src/routes/especie.routes.js
@@ -3,6 +3,7 @@ const {
   getEspecies,
   getEspecie,
   getEspecieDescripcion,
+  getEspecieMedia,
   getEspeciesBusquedaRegion,
   //getEspeciesBusquedaRegionIconos,
 } = require("../controllers/especie.controller")
@@ -10,6 +11,7 @@ const {
 router.route("/especies").get(getEspecies)
 router.route("/especies/:id").get(getEspecie)
 router.route("/especies/:id/descripcion").get(getEspecieDescripcion)
+router.route("/especies/:id/media").get(getEspecieMedia)
 router.route("/especies/busqueda/region").get(getEspeciesBusquedaRegion)
 // router
 //   .route("/especies/busqueda/region/iconos")
